[tool.poetry]
name = "get-music-kasi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "get_music_kasi"}]

[tool.poetry.dependencies]
python = "^3.9"
ruff = "^0.1.9"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
